openshift/agent-statefulset.yaml
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: jaime-agent-openshift
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaime-agent-openshift
  template:
    metadata:
      labels:
        app: jaime-agent-openshift
    spec:
      containers:
        - name: jaime-agent-openshift
          image: 'docker.io/brianwolf94/jaime-agent-openshift:1.6.1'
          ports:
            - name: agent
              containerPort: 7001
              protocol: TCP
          resources: {}
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
  serviceName: jaime-agent-openshift
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  revisionHistoryLimit: 10
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: jaime-agent-kubernetes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaime-agent-kubernetes
  template:
    metadata:
      labels:
        app: jaime-agent-kubernetes
    spec:
      containers:
        - name: jaime-agent-kubernetes
          image: 'docker.io/brianwolf94/jaime-agent-kubernetes:1.6.1'
          ports:
            - name: agent
              containerPort: 7001
              protocol: TCP
          resources: {}
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
  serviceName: jaime-agent-kubernetes
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  revisionHistoryLimit: 10
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: jaime-agent-base
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaime-agent-base
  template:
    metadata:
      labels:
        app: jaime-agent-base
    spec:
      containers:
        - name: jaime-agent-base
          image: 'docker.io/brianwolf94/jaime-agent:1.6.1'
          ports:
            - name: agent
              containerPort: 7001
              protocol: TCP
          resources: {}
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
  serviceName: jaime-agent-base
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  revisionHistoryLimit: 10
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: jaime-agent-pushgateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaime-agent-pushgateway
  template:
    metadata:
      labels:
        app: jaime-agent-pushgateway
    spec:
      containers:
        - name: jaime-agent-base
          image: 'docker.io/brianwolf94/jaime-pushgateway:1.6.1'
          ports:
            - name: agent
              containerPort: 7001
              protocol: TCP
            - name: gateway
              containerPort: 9091
              protocol: TCP              
          resources: {}
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
  serviceName: jaime-agent-pushgateway
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  revisionHistoryLimit: 10
---
