openshift/ocp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaime
spec:
  selector:
    matchLabels:
      app: jaime
  replicas: 1
  template:
    metadata:
      labels:
        app: jaime
    spec:
      containers:
        - name: jaime
          image: 'docker.io/brianwolf94/jaime:1.0.0'
          ports:
            - containerPort: 5000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaime-agent
spec:
  selector:
    matchLabels:
      app: jaime-agent
  replicas: 1
  template:
    metadata:
      labels:
        app: jaime-agent
    spec:
      containers:
        - name: jaime-agent
          image: 'docker.io/brianwolf94/jaime-agent:1.0.0'
          ports:
            - containerPort: 5000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaime-front
spec:
  selector:
    matchLabels:
      app: jaime-front
  replicas: 1
  template:
    metadata:
      labels:
        app: jaime-front
    spec:
      containers:
        - name: jaime-front
          image: 'docker.io/brianwolf94/jaime-front:1.0.0'
          ports:
            - containerPort: 80
  
---

apiVersion: v1
kind: Service
metadata:
  name: jaime
spec:
  selector:
    app: jaime
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: jaime-agent
spec:
  selector:
    app: jaime-agent
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: jaime-front
spec:
  selector:
    app: jaime-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: jaime-front


---

kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: jaime-front
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: jaime-front
    weight: 100
  port:
    targetPort: 80
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
  
---

kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: jaime
spec:
  to:
    kind: Service
    name: jaime
    weight: 100
  port:
    targetPort: 5000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
